EPMRPP-38429. Fix text overflow in delete modal.

--- a/app/src/pages/inside/common/modals/deleteItemsModal/deleteItemsModal.scss
+++ b/app/src/pages/inside/common/modals/deleteItemsModal/deleteItemsModal.scss
@@ -2,5 +2,6 @@
   line-height: 22px;
   b {
     font-family: $FONT-SEMIBOLD;
+    word-break: break-all;
   }
 }
